refactor and clean up MalcolmMultiScanTest
extract methods to create lists of models, points, types, etc.

Change-Id: Ie3890f5baf3a358fc4bd01bbcb3bff734c00bd17